refactor of frontend tool calling
